syntax = "proto3";

option go_package = "./;proto";

// The greeting service definition.
service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing greetings.
message HelloReply {
  string message = 1;
}